<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.vikas.fitbit.ui.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/sliderViewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="@dimen/thirtyDp"
            android:layout_height="@dimen/thirtyDp"
            android:src="@drawable/ic_fitbit_icon"
            app:layout_constraintEnd_toStartOf="@id/tvSplashTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="@dimen/tenDp"
            android:layout_marginTop="@dimen/twentyFiveDp"
            app:tint="@color/white" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSplashTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"

            android:textColor="@color/white"
            android:textSize="@dimen/fontTwentySp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivAppLogo"
            app:layout_constraintTop_toTopOf="@id/ivAppLogo"
            app:layout_constraintBottom_toBottomOf="@id/ivAppLogo"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnJoin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            android:layout_margin="@dimen/twentyDp"
            android:text="@string/join_fitbit"
            android:textAllCaps="false"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/twentyDp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>